fix(april): title update

--- a/page/talks/2017-04-11.md
+++ b/page/talks/2017-04-11.md
@@ -9,7 +9,7 @@ attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/238765557/","eb":"https:
 venue:{"address":"Inviqa (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
-### Community project review
+### Community Teams project review
 
 This month we will learn a bit about an organisation which helps local communities improve the lives of young people,
 get to know the platform they are building in PHP and the issues they are facing 
