chore(talks): added links

--- a/page/talks/2017-05-09.md
+++ b/page/talks/2017-05-09.md
@@ -5,7 +5,7 @@ description:
 date:2017-05-09
 time:18:30 (6:30PM)
 speaker:[{"name":"Scott Pringle","link":"https://twitter.com/Luciam91","image":"https://pbs.twimg.com/profile_images/830203983214080000/Qtnv_45h_400x400.jpg"}]
-attlink:{"mu":"","eb":""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/239722887/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-may-tickets-34319082299", "otc": "https://opentechcalendar.co.uk/event/5302-events-in-practice"}
 venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
