chore(June): updated links and brunty's image link

--- a/page/talks/2017-06-13.md
+++ b/page/talks/2017-06-13.md
@@ -4,8 +4,8 @@ subtitle:Learn what's coming up:
 description:
 date:2017-06-13
 time:18:30 (6:30PM)
-speaker:[{"name":"Matt Brunt","link":"https://twitter.com/Brunty","image":"https://pbs.twimg.com/profile_images/784796406959771648/PvPzKpcw.jpg"}]
-attlink:{"mu":"","eb":""}
+speaker:[{"name":"Matt Brunt","link":"https://twitter.com/Brunty","image":"https://pbs.twimg.com/profile_images/854809586578141184/ly0VUIQA.jpg"}]
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/239722901/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-june-tickets-34849402501","otc":"https://opentechcalendar.co.uk/event/5303-behaviour-driven-development-and-behat-telling-sto"}
 ----
 
 ### Behaviour Driven Development and Behat: Telling Stories Through Code
