updated the subject

--- a/page/talks/2017-07-11.md
+++ b/page/talks/2017-07-11.md
@@ -4,12 +4,41 @@ subtitle:Learn what's coming up:
 description:
 date:2017-07-11
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
+speaker:[{"name":"Stuart Herbert","link":"https://twitter.com/stuherbert","image":"https://pbs.twimg.com/profile_images/504347859651547136/VL5RshvM_400x400.jpeg"}]
 attlink:{"mu":"","eb":""}
-venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
+venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
-### We are looking for a speaker
+### Go 100% Code Coverage Or Go Home
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+Nothing seems to trigger a sudden outbreak of devs on soapboxes like
+mentioning 100% code coverage:
+
+>“Without 100% code coverage, you’re definitely shipping bugs”
+[@stuherbert](https://twitter.com/stuherbert) [#phpyorkshire](https://twitter.com/hashtag/phpyorkshire)
+![Slide from presentation](https://pbs.twimg.com/media/C84Vf3aXcAAC8aq.jpg)
+&mdash;
+Rob Allen (@akrabat) [April 8,
+2017](https://twitter.com/akrabat/status/850641026842857473)
+
+But why is this still seen as controversial in 2017?
+
+In this talk, Stuart will explain what 100% code coverage is, and what
+it isn't. We'll look at the tools available, and their current
+limitations. We'll look in depth at what it tells us, and just as
+importantly, what it cannot tell us. 
+
+But then we'll get into the real debate, the one that triggers that
+recurring outbreak of soapboxes  Stuart will make the case for why he
+promotes 100% Code Coverage as the minimum, why his own tests often
+target 10 times that, and what it costs everyone involved whenever
+developers fall short of that target.
+
+This talk is a blend of technology, business cases and ethics. Stuart's
+talks are interactive, two-way discussions (just like the one he gave at
+PHP Warwickshire back in February:
+https://www.youtube.com/watch?v=v7msMOmIVgM). Bring your own stories and
+counter-examples, and share them as the discussion unfolds @glasgowphp
+in July!
+
+Find out more about Stuart from his [website](http://www.stuartherbert.com) and [follow him on twitter](https://twitter.com/stuherbert).
