--- a/page/talks/2017-07-11.md
+++ b/page/talks/2017-07-11.md
@@ -13,14 +13,14 @@ venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, G
 
 Nothing seems to trigger a sudden outbreak of devs on soapboxes like
 mentioning 100% code coverage:
-
+<div style="width=60%">
 >“Without 100% code coverage, you’re definitely shipping bugs”
 [@stuherbert](https://twitter.com/stuherbert) [#phpyorkshire](https://twitter.com/hashtag/phpyorkshire)
 ![Slide from presentation](https://pbs.twimg.com/media/C84Vf3aXcAAC8aq.jpg)
 &mdash;
 Rob Allen (@akrabat) [April 8,
 2017](https://twitter.com/akrabat/status/850641026842857473)
-
+</div>
 But why is this still seen as controversial in 2017?
 
 In this talk, Stuart will explain what 100% code coverage is, and what
