--- a/page/talks/2017-07-11.md
+++ b/page/talks/2017-07-11.md
@@ -14,12 +14,17 @@ venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, G
 Nothing seems to trigger a sudden outbreak of devs on soapboxes like
 mentioning 100% code coverage:
 <div style="width=60%">
->“Without 100% code coverage, you’re definitely shipping bugs”
-[@stuherbert](https://twitter.com/stuherbert) [#phpyorkshire](https://twitter.com/hashtag/phpyorkshire)
-![Slide from presentation](https://pbs.twimg.com/media/C84Vf3aXcAAC8aq.jpg)
-&mdash;
-Rob Allen (@akrabat) [April 8,
-2017](https://twitter.com/akrabat/status/850641026842857473)
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en"
+dir="ltr">“Without 100% code coverage, you’re definitely shipping bugs”
+<a href="https://twitter.com/stuherbert">@stuherbert</a> <a
+href="https://twitter.com/hashtag/phpyorkshire?src=hash">#phpyorkshire</a>
+<a
+href="https://t.co/qWQCxT8SN8">pic.twitter.com/qWQCxT8SN8</a></p>&mdash;
+Rob Allen (@akrabat) <a
+href="https://twitter.com/akrabat/status/850641026842857473">April 8,
+2017</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js"
+charset="utf-8"></script>
 </div>
 But why is this still seen as controversial in 2017?
 
