--- a/page/talks/2017-07-11.md
+++ b/page/talks/2017-07-11.md
@@ -13,7 +13,7 @@ venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, G
 
 Nothing seems to trigger a sudden outbreak of devs on soapboxes like
 mentioning 100% code coverage:
-<div style="width=60%">
+<div style="width:45%;float:left;margin: 0 20px 0 0;">
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en"
 dir="ltr">“Without 100% code coverage, you’re definitely shipping bugs”
 <a href="https://twitter.com/stuherbert">@stuherbert</a> <a
@@ -42,7 +42,7 @@ developers fall short of that target.
 This talk is a blend of technology, business cases and ethics. Stuart's
 talks are interactive, two-way discussions (just like the one he gave at
 PHP Warwickshire back in February:
-https://www.youtube.com/watch?v=v7msMOmIVgM). Bring your own stories and
+[https://www.youtube.com/watch?v=v7msMOmIVgM](https://www.youtube.com/watch?v=v7msMOmIVgM)). Bring your own stories and
 counter-examples, and share them as the discussion unfolds @glasgowphp
 in July!
 
