--- a/page/talks/2017-07-11.md
+++ b/page/talks/2017-07-11.md
@@ -5,7 +5,7 @@ description:
 date:2017-07-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Stuart Herbert","link":"https://twitter.com/stuherbert","image":"https://pbs.twimg.com/profile_images/504347859651547136/VL5RshvM_400x400.jpeg"}]
-attlink:{"mu":"","eb":""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/241327431/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-july-tickets-34849660272", "otc": "https://opentechcalendar.co.uk/event/5562-go-100-code-coverage-or-go-home"}
 venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
