added Tom's talk

--- a/page/talks/2017-08-08.md
+++ b/page/talks/2017-08-08.md
@@ -4,12 +4,20 @@ subtitle:Learn what's coming up:
 description:
 date:2017-08-08
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
+speaker:[{"name":"Tom Stuttard","link":"https://twitter.com/gettroll","image":"https://pbs.twimg.com/profile_images/876719529631653888/WWp5VhlZ_400x400.jpg"}]
 attlink:{"mu":"","eb":""}
 venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
-### We are looking for a speaker
+### Working with Legacy Applications using TDD.
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+Working on legacy software can be difficult, time consuming and a bit overwhelming. When woking on highly coupled legacy software, how can we be sure any changes we make don't break exisiting functionality? Where do you even begin to start making any changes?
+
+In this talk we will look at the processes involved with refactoring legacy software, techniques we can use to isolate coupled code and make it testable.
+
+These processes and techniques will provide you the confidence you need to work with legacy software instead of working against it.
+
+Read more about Tom on his [website](http://tstuttard.co.uk)
+
+---
+Don't forget, [ScotlandPHP Conference](https://conference.scotlandphp.co.uk/) is on 4th of November
