added 3rd party

--- a/page/talks/2017-08-08.md
+++ b/page/talks/2017-08-08.md
@@ -5,7 +5,7 @@ description:
 date:2017-08-08
 time:18:30 (6:30PM)
 speaker:[{"name":"Tom Stuttard","link":"https://twitter.com/gettroll","image":"https://pbs.twimg.com/profile_images/876719529631653888/WWp5VhlZ_400x400.jpg"}]
-attlink:{"mu":"","eb":""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/242186929/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-august-tickets-36678828363","otc": "https://opentechcalendar.co.uk/event/5685-working-with-legacy-applications-using-tdd"}
 venue:{"address":"STV TV, Pacific Quay, Glasgow, G51 1PQ, Scotland","latitude":"55.85688","longitude":"-4.28610"}
 ----
 
