--- a/page/talks/2017-09-12.md
+++ b/page/talks/2017-09-12.md
@@ -5,7 +5,7 @@ description:
 date:2017-09-12
 time:18:30 (6:30PM)
 speaker:[{"name":"GlasgowPHP","link":"https://twitter.com/glasgowphp","image":"https://pbs.twimg.com/profile_images/463494894095310848/KcNq64cZ_400x400.png"}]
-attlink:{"mu":"","eb":"","otc": ""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/243269590/","eb":"https://www.eventbrite.co.uk/publish?crumb=ddd99aa53ab7d3&eid=37800670824"}
 ----
 
 ### Social
