chore(content): added October

--- a/page/talks/2017-10-10.md
+++ b/page/talks/2017-10-10.md
@@ -1,21 +1,32 @@
 ----
-title:August's Meetup
+title:October's Meetup
 subtitle:Learn what's coming up:
 description:
 date:2017-10-10
 time:18:30 (6:30PM)
-speaker:[{"name":"GlasgowPHP","link":"https://twitter.com/glasgowphp","image":"https://pbs.twimg.com/profile_images/463494894095310848/KcNq64cZ_400x400.png"}]
-attlink:{"mu":"","eb":"","otc": ""}
+speaker:[{"name":"Craig McCreath","link":"https://twitter.com/fusedreality","image":"https://pbs.twimg.com/profile_images/906116915881541632/dJvfG-tq_400x400.jpg"}]
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/243531531","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-october-tickets-38095004183","otc": "https://opentechcalendar.co.uk/event/5855-refactoring-large-legacy-applications-with-laravel"}
 venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
 
-### We are looking for a speaker
+### Refactoring Large Legacy Applications with Laravel
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, 
-so make sure to get in touch and register your interest in presenting!  
+You've been given the task of refactoring that legacy app, 
+so what are you going to do to make sure you're leaving something better? 
+How are you going to tackle something made over the years with features built and 
+understood by those who've left and live in infamy?  
+In this talk we'll 
+look at different techniques you can take to overhaul legacy applications.  
+We'll work from the ground up with planning, production, and aftercare: 
+focusing on 3 different approaches with Laravel you can take depending on your time, 
+budget, and needs so you'll end up with a legacy to be proud of.  
 
+Read more about Craig on his [website](https://craigmccreath.com/)
+<br/>
+<br/>
+Inviqa, our hosts for the evening, are looking for skilled developers.  
+If you are looking for a new and exciting challenge consider coming to the meetup and having a chat with them.
 
 ---
 Don't forget, [ScotlandPHP Conference](https://conference.scotlandphp.co.uk/) is on 4th of November
