chore(talk): updated links

--- a/page/talks/2018-04-10.md
+++ b/page/talks/2018-04-10.md
@@ -5,7 +5,7 @@ description:
 date:2018-04-10
 time:18:30 (6:30PM)
 speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1274682711/strayobject-icon_400x400.jpg"}]
-attlink:{"mu":"","eb":"","otc": ""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/249398010/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-april-tickets-44814147321","otc": "https://opentechcalendar.co.uk/event/6626-symfony4-flex-should-you-upgrade"}
 venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
