--- a/page/talks/2018-05-08.md
+++ b/page/talks/2018-05-08.md
@@ -4,12 +4,11 @@ subtitle:Learn what's coming up:
 description:
 date:2018-05-08
 time:18:30 (6:30PM)
-speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1274682711/strayobject-icon_400x400.jpg"}]
+speaker:[{"name":"Alan Reid","link":"https://twitter.com/alanr193","image":"https://pbs.twimg.com/profile_images/970074157139595264/TWPV99BP_400x400.jpg"}]
 attlink:{"mu":"","eb":"","otc": ""}
-venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
-### We are looking for a speaker
+### More info coming soon
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!
+
+For more info about Alan, check his [website](https://www.alanmichaelreid.com/)
