chore(may talk): add abstract for may

--- a/page/talks/2018-05-08.md
+++ b/page/talks/2018-05-08.md
@@ -8,7 +8,8 @@ speaker:[{"name":"Alan Reid","link":"https://twitter.com/alanr193","image":"http
 attlink:{"mu":"","eb":"","otc": ""}
 ----
 
-### More info coming soon
+### Deploying Safely at Speed
 
+With the advent of cloud computing the software development industry has started to undergo massive changes. Reduced barriers to entry and the ease of access to services has seen many new entrants shake up traditional markets. In these changing times how do you ensure that you remain ahead of your competitors? The answer is SPEED. Moving faster than your competitors will help to ensure you remain relevant. Moving quickly can lead to problems however so let's take a look at how you can continue to deploy safely at speed using continuous integration and continuous delivery.
 
 For more info about Alan, check his [website](https://www.alanmichaelreid.com/)
