chore(may): added links

--- a/page/talks/2018-05-08.md
+++ b/page/talks/2018-05-08.md
@@ -5,7 +5,7 @@ description:
 date:2018-05-08
 time:18:30 (6:30PM)
 speaker:[{"name":"Alan Reid","link":"https://twitter.com/alanr193","image":"https://pbs.twimg.com/profile_images/970074157139595264/TWPV99BP_400x400.jpg"}]
-attlink:{"mu":"","eb":"","otc": ""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/250301076/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-may-tickets-45714542427","otc": "https://opentechcalendar.co.uk/event/6786-deploying-safely-at-speed"}
 ----
 
 ### Deploying Safely at Speed
