add content for july

--- a/page/talks/2018-07-10.md
+++ b/page/talks/2018-07-10.md
@@ -4,12 +4,18 @@ subtitle:Learn what's coming up:
 description:
 date:2018-07-10
 time:18:30 (6:30PM)
-speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1274682711/strayobject-icon_400x400.jpg"}]
+speaker:[{"name":"Glynn Forrest","link":"https://twitter.com/backbeat_tech","image":"https://pbs.twimg.com/profile_images/953705084088668160/fqSFinB7_400x400.jpg"}]
 attlink:{"mu":"","eb":"","otc": ""}
 venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
-### We are looking for a speaker
+### Build and host your own Composer packages
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!
+The Composer package manager has improved PHP development perhaps more than anything else in the last decade. Instead of copying code from project to project, we can now require specific packages with Composer. Packagist is a great public repository for these packages, but teams often need to keep their own internal packages private.
+
+In this live-coding talk, we'll learn how to create a Composer package, host it on private infrastructure, and require it in a new project.
+
+We'll build a brand new package from scratch; test it using Docker on the Jenkins CI server; host it internally using our own package repository, Satis; and finally, investigate Jenkins-ception - using Jenkins to provision itself.
+
+When not wrestling with Jenkins, Glynn Forrest lives a double life as a classical musician and director of Backbeat Technologies, a Glasgow-based software company.
+
