chore(talks): added August

--- a/page/talks/2018-08-14.md
+++ b/page/talks/2018-08-14.md
@@ -4,12 +4,14 @@ subtitle:Learn what's coming up:
 description:
 date:2018-08-14
 time:18:30 (6:30PM)
-speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1274682711/strayobject-icon_400x400.jpg"}]
+speaker:[{"name":"Stephen Heron","link":"https://twitter.com/Heron","image":"https://pbs.twimg.com/profile_images/3651522882/ba965776fef939f10721fab0b80e7a22_400x400.png"}]
 attlink:{"mu":"","eb":"","otc": ""}
-venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
-### We are looking for a speaker
+### Serverless PHP
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!
+As defined by Wikipedia, Serverless computing is a cloud-computing execution model in which the cloud provider dynamically manages the allocation of machine resources. Pricing is based on the actual amount of resources consumed by an application, rather than on pre-purchased units of capacity.
+
+AWS Lambda, introduced by Amazon in 2014, was the first public cloud vendor with an abstract serverless computing offering. AWS Lambda natively supports Node.js, Python, Java, C# and Go.
+
+We are going to take a closer look at serverless computing, its advantages and disadvantages and how we can leverage PHP in the serverless execution model.
