chore(talks): added august links

--- a/page/talks/2018-08-14.md
+++ b/page/talks/2018-08-14.md
@@ -5,7 +5,7 @@ description:
 date:2018-08-14
 time:18:30 (6:30PM)
 speaker:[{"name":"Stephen Heron","link":"https://twitter.com/Heron","image":"https://pbs.twimg.com/profile_images/3651522882/ba965776fef939f10721fab0b80e7a22_400x400.png"}]
-attlink:{"mu":"","eb":"","otc": ""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/253369273/","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-august-tickets-48641373658","otc": "https://opentechcalendar.co.uk/event/7174-serverless-php"}
 ----
 
 ### Serverless PHP
