chore(talk): updated info on September's talk

--- a/page/talks/2018-09-11.md
+++ b/page/talks/2018-09-11.md
@@ -6,9 +6,18 @@ date:2018-09-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1034200586286182401/7GKhoQPB_400x400.jpg"}]
 attlink:{"mu":"","eb":"","otc": ""}
-venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
+
 ----
 
 ### Introduction to Elastic stack
 
-More info coming soon.
+We will be talking about what Elastic stack is. Explain the components and major use cases.
+Mike is going to provide deployment options and talk about some common issues that you may come across.
+Finally, there will be an example on how to plug it all in with your own project.
+<br/>
+<br/>
+
+Don't forget there is our community run conference on 6th of October. Check out [ScotlandPHP](https://conference.scotlandphp.co.uk/)
+<br/>
+This month's raffle includes a ScotlandPHP ticket and a JetBrains licence.
+ 
