--- a/page/talks/2018-09-11.md
+++ b/page/talks/2018-09-11.md
@@ -5,7 +5,7 @@ description:
 date:2018-09-11
 time:18:30 (6:30PM)
 speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1034200586286182401/7GKhoQPB_400x400.jpg"}]
-attlink:{"mu":"","eb":"","otc": ""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/254549613","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-september-tickets-50064517319","otc": "https://opentechcalendar.co.uk/event/7361-introduction-to-elastic-stack"}
 
 ----
 
