--- a/page/talks/2018-12-11.md
+++ b/page/talks/2018-12-11.md
@@ -6,10 +6,9 @@ date:2018-12-10
 time:18:30 (6:30PM)
 speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1274682711/strayobject-icon_400x400.jpg"}]
 attlink:{"mu":"","eb":"","otc": ""}
-venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
+
 ----
 
-### We are looking for a speaker
+### Winter break
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!
+Join us in February 2019 for the next meetup.
