chore(april): added meetup and eb links

--- a/page/talks/2019-04-09.md
+++ b/page/talks/2019-04-09.md
@@ -2,10 +2,10 @@
 title:April Meetup
 subtitle:Learn what's coming up:
 description:
-date:2019-04-10
+date:2019-04-09
 time:18:30 (6:30PM)
 speaker:[{"name":"Nev Stokes","link":"https://twitter.com/nevstokes","image":"https://pbs.twimg.com/profile_images/956113250369798145/4y0DtCd0_400x400.jpg"}]
-attlink:{"mu":"","eb":"","otc": ""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/260034447","eb":"https://www.eventbrite.co.uk/e/glasgowphp-monthly-april-tickets-59296645864","otc": ""}
 venue:{"address":"Inviqa Glasgow (Spaces floor 2), Tay House, 300 Bath Street, Glasgow, G2 4JR, Scotland","latitude":"55.865654","longitude":"-4.270596"}
 ----
 
