chore(talks): added 3rd party links

--- a/page/talks/2019-07-09.md
+++ b/page/talks/2019-07-09.md
@@ -5,12 +5,12 @@ description:
 date:2019-07-09
 time:18:30 (6:30PM)
 speaker:[{"name":"Michal Zdrojewski","link":"https://twitter.com/strayobject","image":"https://pbs.twimg.com/profile_images/1034200586286182401/7GKhoQPB_400x400.jpg"}]
-attlink:{"mu":"","eb":"","otc": ""}
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/262878335","eb":"","otc": "https://opentechcalendar.co.uk/event/8807-whats-new-in-php-74"}
 ----
 
 ### What's new in PHP 7.4
 
-We've all heard rumors. New shiny features are coming to PHP in November.
+We've all heard rumours. New shiny features are coming to PHP in November.
 With the recent publication of the alpha release, let's see the features in more detail
 and take them for a spin (maybe).
 
