August talk update.

--- a/page/talks/2019-08-13.md
+++ b/page/talks/2019-08-13.md
@@ -4,11 +4,27 @@ subtitle:Learn what's coming up:
 description:
 date:2019-08-13
 time:18:30 (6:30PM)
-speaker:[{"name":"","link":"","image":""}]
-attlink:{"mu":"","eb":""}
+speaker:[{"name":"Ashley Nicolson","link":"https://twitter.com/MiniRidley","image":"https://pbs.twimg.com/profile_images/714375819997614080/PiD5kgNA_400x400.jpg"}]
+attlink:{"mu":"https://www.meetup.com/GlasgowPHP/events/263762822","otc":"https://opentechcalendar.co.uk/event/8982-why-should-we-encourage-student-oss-participation"}
 ----
 
-### We are looking for a speaker
+### Why should we encourage student OSS participation?
 
-Have an interesting project you're working on at the moment? Want to share something with the PHP community?  
-We're looking for a speaker for the upcoming meetup, so make sure to get in touch and register your interest in presenting!  
+We tend to remember our computing education to be very technical and limited in 
+interaction with other peers (unless it was that dreaded group project!). 
+But lets imagine how this could be improved to help future students get a 
+better sense of what it’s like in a realistic development environment – 
+without scaring them off!
+
+In this talk we are going to explore how teaching students about participating 
+in open source software projects can help build up their technical & social 
+skills to venture out into the professional world. We discuss how merely 
+engaging with others in online communities can have a positive impact on their 
+interest in computing and potentially the project itself. We also talk about 
+some of these projects they can explore (including PHP), the materials 
+available to help teach faculty how to incorporate this into their curriculum, 
+and how you can get involved in encouraging the younger generation to 
+participate and learn from the open source projects we may often use daily.
+
+<br/><br/>
+Big thanks to this months sponsors **Markup**, **SalesAgility** and **JetBrains**. 
