chore(page): updated March

--- a/page/talks/2020-03-10.md
+++ b/page/talks/2020-03-10.md
@@ -24,3 +24,9 @@ Time-Series data is so natural and common that you actually consume, evaluate, a
 In this talk we will look at the different types of time-series data and how to use that to drive observations, understanding, and automation.
 
 Most data is best understood in the dimension of time, lets see why.
+
+<br/><br/>
+**Event is sponsored and hosted by [DIGITONIC](https://digitonic.co.uk) - check map below for directions.**
+
+**Accessibility**: Venue has an elevator, however there are few steps initially which require assistance. We are happy to help.  
+**Food**: Our usual is pizza and soft drinks/beer.
